--- a/Index.html
+++ b/Index.html
@@ -30,6 +30,7 @@
         <a href="#"> Skills</a>
         <a href="#">Services</a>
         <a href="#">Contact</a>
+        <a href="#">Contact</a>
       </div>
     </nav>
 
